--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
       "name": "Upcountry Contractors",
       "description": "Expert construction and remodeling services in upcountry South Carolina",
       "url": "https://upcountrycontractors.com",
-      "telephone": "+1-864-555-1234",
-      "email": "info@upcountrycontractors.com",
+      "telephone": "+1-678-386-8951",
+      "email": "e.garrett.lovin@gmail.com",
       "address": {
         "@type": "PostalAddress",
         "addressRegion": "SC",
